--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,3 +35,24 @@ workflows:
       - tests_macos:
           name: 'tests on macOS (Xcode 12.5.1)'
           xcode_version: '12.5.1'
+      - tests_macos:
+          name: 'tests on macOS (Xcode 13.4.1)'
+          xcode_version: '13.4.1'
+      - tests_macos:
+          name: 'tests on macOS (Xcode 14.3.1)'
+          xcode_version: '14.0.1'
+      - tests_macos:
+          name: 'tests on macOS (Xcode 14.3.1)'
+          xcode_version: '14.1.0'
+      - tests_macos:
+          name: 'tests on macOS (Xcode 14.3.1)'
+          xcode_version: '14.2.0'
+      - tests_macos:
+          name: 'tests on macOS (Xcode 14.3.1)'
+          xcode_version: '14.3.1'
+      - tests_macos:
+          name: 'tests on macOS (Xcode 14.3.1)'
+          xcode_version: '15.0.0'
+      - tests_macos:
+          name: 'tests on macOS (Xcode 15.0.1)'
+          xcode_version: '15.0.1'
