--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,14 @@ jobs:
     shell: '/bin/bash --login -eo pipefail'
     steps:
       - checkout
+      - run:
+          name: troubleshoot switch-ruby
+          command: |
+            echo shell: $SHELL
+            env | sort
+            ruby -v
+            command -v rbenv
+            /usr/bin/xcodebuild -version
       - macos/switch-ruby:
           version: "system"
       - run:
