--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,11 @@ jobs:
           name: debug | ruby version
           command: |
             .circleci/scripts/cienv | tee -a ~/cienv.txt
+      - run:
+          name: debug | test pty
+          command: |
+            brew install stress
+            STRESS=y ruby test_pty.rb "echo foo"
       - store_artifacts:
           path: ~/cienv.txt
           destination: cienv.txt
